@@ -28,8 +28,6 @@ http://www.worldofspectrum.org/zxplus3e/p3eroms.html
 The first on English, the second on Spanish
 Both for ide 8-bit simple
 
-You will see "+2e" instead of "+3e" because the +3 disk drive is not emulated
-
 
 
 alternaterom_plus2c.rom ZX Spectrum Plus 2C, For Spectrum 128k/+2
